--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+button:hover {
+  box-shadow: 2px 2px 2px 2px #888888;
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
