--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Belanosima:wght@400;600;700&family=Mansalva&family=Palanquin+Dark:wght@400;500;600&family=Rubik+Moonrocks&family=Russo+One&display=swap');
