--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -7,6 +7,20 @@
   pointer-events: none;
 }
 
+.mascot {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.welcome {
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
