--- a/frontend/src/styles/UserStats.scss
+++ b/frontend/src/styles/UserStats.scss
@@ -1,30 +1,35 @@
 .energy-bar-container {
   display: flex;
   flex-wrap: wrap;
+  object-fit: cover;
+  border: 2px solid black;
+  border-radius: 10px;
   flex-direction: column;
   height: 2em;
   z-index: 900;
-  align-content: center;
+  align-content: flex-start;
 }
 
 .energy-bar {
- display: flex;
- flex-direction: row;
- justify-content: center;
- height: 100%;
- width: 95%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .energy {
-  background-color: grey;
   height: 100%;
-  width: 100%;
-  padding: none;
-  z-index: 900;
+  background-color: #4caf50;
+  border-radius: 10px;
+  transition: width 0.3s ease-in-out;
 }
 
 .energy-green {
-  display: inline-block;
+  display: flex;
+  align-self: flex-start;
   background-color: green;
   height: 100%;
   width: 100%;
