--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -43,9 +43,9 @@
 
 .sprite {
   position: absolute;
-  width: 70%;
+  width: 15em;
   z-index: -1;
-  transform: translate(-50%, -94%);
+  transform: translate(-50%, -100%);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
