minor css tweaks

--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -17,7 +17,8 @@
   color: black;
   width: 30%;
   border-radius: 25px;
-  border: black solid 2px;
+  border: black solid 3px;
+  box-shadow: 2px 2px 5px 2px black;
   padding: .5em;
 }
 
@@ -32,7 +33,7 @@
   margin: 0 auto;
   padding: 10px;
   border-radius: 30px;
-  border: black solid 2px;
+  border: black solid 3px;
   box-shadow: 2px 2px 5px 2px black;
 }
 
