--- a/frontend/src/styles/MoodBar.scss
+++ b/frontend/src/styles/MoodBar.scss
@@ -28,6 +28,7 @@
   flex-direction: row;
   justify-content: center;
   height: 100%;
+  max-width: 100%;
   background-color: #4caf50;
   border-radius: 10px;
   overflow: hidden;
