added emoji reactions to pets on actions

--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -52,9 +52,29 @@
   background-position: center;
 }
 
-// .background {
-//   position: sticky;
-//   top: 0;
-//   left: 0;
-//   z-index: 0;
-// }
+.reaction {
+  position: absolute;
+  right: 30%;
+  bottom: 120%;
+}
+
+.reaction-hidden {
+  position: absolute;
+  right: 30%;
+  bottom: 120%;
+  font-size: 5em;
+  opacity: 0;
+  transform: translate(50px, 20px);
+  animation-duration: 3s;
+  animation-name: slidein, fadeOut;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateY(0%);
+  }
+
+  to {
+    transform: translateY(-100%);
+  }
+}
