--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -21,6 +21,12 @@
   100% { opacity: 1; }
 }
 
+@keyframes fadeOut {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
