added centering and fixed game size to 768x1024px

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .App-logo {
@@ -27,19 +33,12 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+button {
+  font-family: 'Roboto Mono', monospace;
 }
 
 button:hover {
