--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -1,16 +1,22 @@
 .game {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  vertical-align: middle;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  width: 768px;
+  height: 1024px;
+  max-width: 768px;
+  max-height: 1024px;
   background-color: black;
   z-index: 99;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .user-stats {
-  font-family: Arial, Helvetica, sans-serif;
-  position: fixed;
+  position: absolute;
   margin-top: 2em;
   margin-left: 2em;
   background-color: whitesmoke;
@@ -23,7 +29,6 @@
 }
 
 .event {
-  font-family: Arial, Helvetica, sans-serif;
   position: absolute;
   background-color: white;
   color: black;
