--- a/frontend/src/styles/MoodBar.scss
+++ b/frontend/src/styles/MoodBar.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 30%;
-  position: fixed;
+  position: absolute;
   margin-top: 2em;
   right: 0%;
   margin-right: 2em;
