implement sprite moods and apply linting

--- a/frontend/src/styles/Event.scss
+++ b/frontend/src/styles/Event.scss
@@ -9,11 +9,11 @@
   justify-content: flex-start;
   align-items: center;
   height: 2.5rem;
-  margin: .5rem;
+  margin: 0.5rem;
   border-radius: 30px;
   border-style: solid;
-  font-family: 'Mansalva', sans-serif;
-} 
+  font-family: "Mansalva", sans-serif;
+}
 
 // Fade out
 
