--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -19,7 +19,7 @@
   border-radius: 25px;
   border: black solid 3px;
   box-shadow: 2px 2px 5px 2px black;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .event {
