add intro to start screen

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -71,3 +71,11 @@ button:hover {
     transform: rotate(360deg);
   }
 }
+
+
+.intro {
+  width: 70%;
+  font-size: .75em;
+  text-align: left;
+  margin-top: -.75em;
+}
