--- a/frontend/src/styles/MoodBar.scss
+++ b/frontend/src/styles/MoodBar.scss
@@ -29,7 +29,7 @@
   justify-content: center;
   height: 100%;
   max-width: 100%;
-  background-color: #4caf50;
+  background-color: #be4a4a;
   border-radius: 10px;
   overflow: hidden;
   transition: width 0.6s;
