--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -7,10 +7,10 @@
   display: flex;
   flex-direction: column;
   background-color: #282c34;
-  height: 1024px;
-  width: 768px;
-  max-height: 1024px;
-  max-width: 768px;
+  height: 100vh;
+  width: 100vw;
+  max-width: 60%;
+  max-height: 100%;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
@@ -18,6 +18,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(.3em + 2vmin);
   color: white;
+}
+
+.intro {
+  width: 70%;
+  font-size: .75em;
+  text-align: left;
+  margin-top: -.75em;
 }
