--- a/frontend/src/styles/UserStats.scss
+++ b/frontend/src/styles/UserStats.scss
@@ -1,5 +1,15 @@
 .user-stats {
   max-height: calc(fit-content + 1px);
+  position: absolute;
+  margin-top: 2em;
+  margin-left: 2em;
+  background-color: whitesmoke;
+  color: black;
+  width: 30%;
+  border-radius: 25px;
+  border: black solid 3px;
+  box-shadow: 2px 2px 5px 2px black;
+  padding: 0.5em;
 }
 
 .energy-bar-container {
