--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,7 +2,7 @@
   background-color: black;
   width: 100vw;
   height: 100vh;
-  font-size: calc(.001em + 2vmin);
+  font-size: calc(1em - .01vmin);
 }
 
 .App {
