--- a/frontend/src/styles/Event.scss
+++ b/frontend/src/styles/Event.scss
@@ -30,10 +30,13 @@
 }
 
 .option, .next {
-  // display: flex;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   font-size: calc(.001em + 2vmin);
   height: calc(1em + 18px);
   margin-top: .5em;
+  padding-left: 1.25em;
   // margin-bottom: -1rem;
   border-radius: 30px;
   border-style: solid;
