--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -4,11 +4,12 @@
   flex-direction: column;
   vertical-align: middle;
   transform: translate(-50%, -50%);
+  aspect-ratio: 3/4;
   top: 50%;
   left: 50%;
-  height: 100vh;
-  width: 100vw;
-  max-width: 40%;
+  height: 100%;
+  width: 100%;
+  // max-width: 40%;
   max-height: 100%;
   background-color: black;
   z-index: 99;
