--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -1,5 +1,7 @@
 .welcome {
   font-family: 'Lobster', sans-serif;
+  animation: fadeIn 5s;
+  width: 90%;
 }
 
 .App-header {
@@ -7,10 +9,15 @@
   display: flex;
   flex-direction: column;
   background-color: #282c34;
-  height: 100vh;
-  width: 100vw;
-  max-width: 60%;
-  max-height: 100%;
+  aspect-ratio: 3/4;
+  // height: 100vh;
+  // width: 100vw;
+  // max-width: 60%;
+  max-width: 768px;
+  // max-height: 100%;
+  max-height: 1024px;
+  height: 100%;
+  max-width: 100%;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
@@ -23,8 +30,57 @@
 }
 
 .intro {
-  width: 70%;
+  width: 80%;
   font-size: .75em;
   text-align: left;
   margin-top: -.75em;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  padding: 1em;
+  animation: fadeIn 5s;
+}
+
+.new-game {
+  box-shadow: none;
+}
+
+.new-game:hover {
+  box-shadow: none;
+  animation: bounce 2s ease infinite;
+}
+
+input {
+  padding: .5em;
+  margin: .5em;
+  text-align: center;
+  border-radius: 25px;
+}
+
+// @keyframes bounce {
+//   70% { transform:translateY(0%); }
+//   80% { transform:translateY(-15%); }
+//   90% { transform:translateY(0%); }
+//   95% { transform:translateY(-7%); }
+//   97% { transform:translateY(0%); }
+//   99% { transform:translateY(-3%); }
+//   100% { transform:translateY(0); }
+// }
+
+@keyframes bounce {
+  0%, 30%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  20% {
+    transform: translateY(-15%);
+  }
+  60% {
+    transform: translateY(-7%);
+  }
+}
+
