--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -9,17 +9,25 @@
   left: 50%;
   height: 100%;
   width: 100%;
-  // max-width: 40%;
-  max-height: 100%;
+  max-width: 768px;
+  max-height: 1024px;
   background-color: black;
   z-index: 99;
   font-family: 'Roboto Mono', monospace;
 }
 
+.game .fade-in{
+  animation: fadeIn 5s 1;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  50% { opacity: 1 }
+}
+
 .sprite {
   position: absolute;
   width: 15em;
-  // z-index: -1;
   transform: translate(-50%, -100%);
   background-size: contain;
   background-repeat: no-repeat;
@@ -53,4 +61,8 @@
   to {
     transform: translateY(-150%);
   }
+}
+
+.fade-in {
+  transition: 2s linear;
 }
