refactor some cleanup

--- a/frontend/src/styles/Event.scss
+++ b/frontend/src/styles/Event.scss
@@ -34,7 +34,7 @@
   justify-content: flex-start;
   align-items: center;
   font-size: calc(.001em + 2vmin);
-  height: calc(1em + 18px);
+  height: calc(fit-content + 18px);
   margin-top: .5em;
   padding-left: 1.25em;
   // margin-bottom: -1rem;
