Co-authored-by: Alfonso Banzon <thefonzie-codes@users.noreply.github.com> Co-authored-by: Alanna Phan <yummyflan@users.noreply.github.com>

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,7 +2,9 @@
   background-color: black;
   width: 100vw;
   height: 100vh;
-  font-size: 1.6em;
+  font-size: calc(1em + .6vmin);
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 .App {
