--- a/frontend/src/styles/Event.scss
+++ b/frontend/src/styles/Event.scss
@@ -6,7 +6,7 @@
   bottom: 3%;
   left: 2.5%;
   width: 90%;
-  max-height: fit-content;
+  max-height: 50%;
   margin: 0 auto;
   padding: 10px;
   border-radius: 30px;
