--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -10,14 +10,11 @@
   flex-direction: column;
   background-color: #282c34;
   aspect-ratio: 3/4;
-  // height: 100vh;
-  // width: 100vw;
-  // max-width: 60%;
-  max-width: 768px;
-  // max-height: 100%;
-  max-height: 1024px;
-  height: 100%;
-  max-width: 100%;
+  width: 100%;
+  max-height: 95%;
+  max-width: 40%;
+  min-height: 532px;
+  min-width: 399px;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
