--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,35 +1,32 @@
-#root {
+html {
   background-color: black;
-  width: 110vw;
-  height: 110vh;
-  font-size: calc(1em + .6vmin);
+}
+
+#root {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
   min-width: 100vw;
+  width: 100%;
+  height: 100%;
+  font-size: calc(1em + .6vmin);
+  overflow: visible;
 }
 
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
   max-width: 768px;
   max-height: 1024px;
   background-color: black;
   display: flex;
   justify-content: center;
   align-content: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 button {
@@ -40,15 +37,6 @@ button {
 button:hover {
   box-shadow: 2px 2px 2px 2px #888888;
   cursor: pointer;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 @media (max-width: 768px) {
