--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   font-family: 'Lobster', sans-serif;
-  animation: fadeIn 5s;
+  animation: fadeIn 5s 1;
   // width: 90%;
   font-size: 3rem;
   height: 10%;
@@ -11,21 +11,29 @@
 .StartScreen {
   display: flex;
   flex-direction: column;
-  background-color: #282c34;
+  background-image: url("../assets/images/field.jpg");
   aspect-ratio: 3/4;
-  // width: 100%;
+  width: 100%;
   max-height: 95%;
   // max-width: 40%;
   min-height: 532px;
   min-width: 375px;
   max-width: 768px;
   max-height: 1024px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
   align-self: center;
+  background-size: cover;
+}
+
+.StartScreen-container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  animation: fadeIn 5s;
+  align-content: center;
+  justify-content: center;
 }
 
 .intro {
@@ -55,6 +63,15 @@
   animation: fadeIn 5s;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1em;
+  padding: 1em;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -64,27 +81,17 @@
   }
 }
 
-@keyframes fadeOut {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1em;
-  padding: 1em;
-  animation: fadeIn 5s;
-}
+// @keyframes fadeOut {
+//   0% {
+//     opacity: 0;
+//   }
+//   50% {
+//     opacity: 1;
+//   }
+//   100% {
+//     opacity: 0;
+//   }
+// }
 
 .new-game {
   box-shadow: none;
