made some adjustments to fade timings

--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -15,6 +15,7 @@
   background-color: black;
   z-index: 99;
   font-family: "Roboto Mono", monospace;
+  animation: fadeIn 6s 1;
 }
 
 .game .fade-in {
