--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -7,11 +7,10 @@
   aspect-ratio: 3/4;
   top: 50%;
   left: 50%;
-  width: 98%;
-  max-width: 768px;
-  max-height: 1024px;
-  min-height: 532px;
-  min-width: 375px;
+  min-height: 100vmin;
+  min-width: 100vmin;
+  max-width: 100vw;
+  max-height: 100vh;
   background-color: black;
   z-index: 99;
   font-family: "Roboto Mono", monospace;
@@ -22,7 +21,7 @@
   animation: fadeIn 2s 1;
 }
 
-@keyframes fade {
+@keyframes fadeOut {
   0%,
   100% {
     opacity: 0;
