--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -9,17 +9,18 @@
 }
 
 .StartScreen {
+  position: absolute;
   display: flex;
   flex-direction: column;
   background-image: url("../assets/images/field.jpg");
   aspect-ratio: 3/4;
-  width: 100%;
   max-height: 95%;
+  // max-height: 95%;
   // max-width: 40%;
-  min-height: 532px;
-  min-width: 375px;
-  max-width: 768px;
-  max-height: 1024px;
+  min-height: 100vmin;
+  min-width: 100vmin;
+  max-width: 100vw;
+  max-height: 100vh;
   align-items: center;
   justify-content: center;
   color: white;
@@ -46,9 +47,10 @@
 }
 
 .mascot {
-  height: 20%;
+  width: 70%;
   pointer-events: none;
   animation: wiggle 2s infinite;
+  align-self: center;
 }
 
 @keyframes wiggle {
@@ -133,18 +135,15 @@ input {
 
 @media screen and (max-width: 768px){
   .intro {
-    font-size: 3vw;
+    font-size: 3vmin;
   }
   .welcome {
-    font-size: 6vw;
-  }
-  .mascot {
-    height: 20vw;
+    font-size: 6vmin;
   }
   .input {
-    font-size: 3vw;
+    font-size: 3vmin;
   }
-  .new-game {
-    font-size: 3vw;
-  }
+  // .new-game {
+  //   font-size: 3vw;
+  // }
 }
