--- a/frontend/src/styles/TitleScreen.scss
+++ b/frontend/src/styles/TitleScreen.scss
@@ -3,11 +3,10 @@
   aspect-ratio: 3/4;
   width: 100%;
   max-height: 95%;
-  min-height: 532px;
-  min-width: 375px;
-  // max-width: 40%;
-  max-width: 768px;
-  max-height: 1024px;
+  min-height: 100vmin;
+  min-width: 100vmin;
+  max-width: 100vw;
+  max-height: 100vh;
   color: white;
   background-image: url("../assets/images/field.jpg");
   align-items: center;
