--- a/frontend/src/styles/StartScreen.scss
+++ b/frontend/src/styles/StartScreen.scss
@@ -41,8 +41,7 @@
   display: flex;
   flex-direction: row;
   width: 80%;
-  font-size: 1.4rem;
-  height: 30%;
+  font-size: 2.75vmin;
   text-align: center;
 }
 
@@ -134,9 +133,9 @@ input {
 }
 
 @media screen and (max-width: 768px){
-  .intro {
-    font-size: 3vmin;
-  }
+  // .intro {
+  //   font-size: 1.2rem;
+  // }
   .welcome {
     font-size: 6vmin;
   }
