--- a/frontend/src/styles/Game.scss
+++ b/frontend/src/styles/Game.scss
@@ -2,11 +2,9 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  vertical-align: middle;
-  transform: translate(-50%, -50%);
+  align-content: center;
+  justify-content: center;
   aspect-ratio: 3/4;
-  top: 50%;
-  left: 50%;
   min-height: 100vmin;
   min-width: 100vmin;
   max-width: 100vw;
