try cursor pointer again

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -29,7 +29,7 @@ html {
   align-content: center;
   flex-wrap: wrap;
   align-items: center;
-  // cursor: pointer;
+  cursor: pointer;
 }
 
 button {
